Amending layout issues on desktop

--- a/css/main.scss
+++ b/css/main.scss
@@ -21,6 +21,12 @@ body {
     margin: auto;
 }
 
+.innerContainer {
+    max-width: 1128px;
+    margin: auto;
+}
+
+
 ////// Typography
 
 h1 {
@@ -116,7 +122,7 @@ p {
     height: 850px;
     background-color: $mainBlack;
 
-    .navbar {
+    .navigation {
         // CSS Grid system for the top navigation
         display: grid;
         grid-template-columns: 20% 60% 20%;
@@ -166,29 +172,9 @@ p {
             }
     }
 
-
-    .innerContainer {
-        max-width: 1128px;
-        margin: auto;
-
-        .homepageHeaderWhite {
-            color: $mainWhite;
-            padding-top: 200px;
+    .outerContainer .innerContainer .homepageHeaderWhite {
+        color: $mainWhite;
+        padding-top: 200px;
         }
     }
-}
-
-////// Homepage Portfolio
-.portfolioHero {
-    width: 100%;
-    height: 1080px;
-    background-image: url("../assets/heroportfolioimage1.jpg");
-    background-size: cover;
-    background-position: 50%;
-
-    .caseStudyCopy {
-        width: 90%;
-        margin: 0 auto;
-    }
-}
 
